[package]
name = "combine_game"
version = "0.1.0"
edition = "2021"


[features]
default = []
#default = ["debug_render_colliders", "debug_ui_node_colours"]
#default = ["debug_ui_node_colours"]
debug_fps = []
debug_render_colliders =  []
debug_ui_node_colours = []


[dependencies]
bevy_rapier2d = "0.16.1"
enum-map = "2.4.1"
rand = "0.8.5"

[dependencies.bevy_kira_audio]
version = "0.12.0"
features = ["wav", "flac", "mp3"]

[dependencies.bevy]
version = "0.8.0"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    "hdr",
    "x11",
    "filesystem_watcher",
]